// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Footer with Edit Link 1`] = `
<div
  className="card-footer"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        Source: 
        <a
          href="google.com"
        >
          localhost
        </a>
      </div>
      <p
        className="body2"
      >
        Created by: Ryan Noelk
      </p>
      <p
        className="body2"
      >
        Last Updated: 2017-01-01
      </p>
    </div>
    <div
      className="col-auto"
    >
      <div
        className="btn-group"
        role="group"
      >
        <a
          href="/recipe/edit/123"
          onClick={[Function]}
        >
          <button
            className="btn btn-primary btn-sm"
            disabled={false}
            type="button"
          >
            <i
              className="bi bi-pencil-fill"
            />
          </button>
        </a>
        <button
          className="btn btn-danger btn-sm"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <i
            className="bi bi-trash-fill size-1x"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Footer without Edit Link 1`] = `
<div
  className="card-footer"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div>
        Source: 
        <a
          href="google.com"
        >
          localhost
        </a>
      </div>
      <p
        className="body2"
      >
        Created by: Ryan Noelk
      </p>
      <p
        className="body2"
      >
        Last Updated: 2017-01-01
      </p>
    </div>
  </div>
</div>
`;
